--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -17,7 +17,7 @@ time, mark, audio, video {
   font: inherit;
   font-size: 100%;
   vertical-align: baseline;
-  @include box-sizing(border-box);
+  box-sizing: border-box;
 }
 
 html {
@@ -25,7 +25,7 @@ html {
 }
 
 body {
-  font-family: $font, serif;
+  font-family: $primary_font, serif;
   line-height: 1;
 }
 
@@ -66,7 +66,7 @@ a {
 
 article, aside, details, figcaption, figure, footer, header, main, menu, nav, section, summary {
   display: block;
-  @include box-sizing(border-box);
+  box-sizing: border-box;
 }
 
 :focus {
