--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -11,7 +11,7 @@ $dark_color:                #454545;
 
 // Fonts
 
-$primary_font: 'Marta';
+$primary_font: 'GothamPro';
 $secondary_font: '';
 
 $font-size-base:            10; // normalize font-size for body in 'px'
