--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -29,6 +29,9 @@
 @import "_sidebar";		    // стили виджетов сайдбара
 @import "_excerpt";			// post excerpts
 @import "_post";            // стили поста
+@import "_libs";            // стили библиотек/плагинов
+
+@import "partials/welcome";
 
 @import "adaptive";			// стили адаптивки
 
