--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -7,6 +7,7 @@ $primary_color:             #3f4147;
 $secondary_color:           #a70c5d;
 $light_color:               #9a9a9a;
 $dark_color:                #454545;
+$border_color:              #f4f4f4;
 
 
 // Fonts
