--- a/assets/scss/partials/_testimonials.scss
+++ b/assets/scss/partials/_testimonials.scss
@@ -1,3 +1,114 @@
 .testimonials {
+  color: $primary_color;
+
+  &__block {
+    position: relative;
+    padding-left: 4rem;
+    padding-right: 4rem;
+    padding-top: 2.7rem;
+    cursor: pointer;
+
+    & > p {
+      font-size: 1.7rem;
+      line-height: 2.5rem;
+      margin-bottom: 2.5rem;
+    }
+
+    &:before, &:after {
+      content: '';
+      width: 2.7rem;
+      height: 2.7rem;
+      position: absolute;
+      top: -2.7rem;
+      overflow: hidden;
+
+      transition-duration: $time;
+      transition-timing-function: ease;
+      transition-property: transform;
+    }
+
+    &:before {
+      background: url('/assets/img/svg/quotes.svg');
+    }
+
+    &:after {
+      background: url('/assets/img/svg/quotes-active.svg');
+      transform: scale(0);
+    }
+
+    &_video:before {
+      background: url('/assets/img/svg/video.svg');
+    }
+
+    &_video:after {
+      background: url('/assets/img/svg/video-active.svg');
+      transform: scale(0);
+    }
+
+  }
+
+  &__video {
+    height: 20rem;
+  }
+
+  &__author-image {
+    width: 5rem;
+    height: 5rem;
+    border-radius: 50%;
+    overflow: hidden;
+  }
+
+  &__author-name {
+    font-size: 1.3rem;
+    line-height: 2rem;
+    font-weight: 600;
+  }
+
+  &__author-info {
+    font-size: 1.2rem;
+    line-height: 2rem;
+  }
+
+  &__author-info a {
+    color: $primary_color;
+    font-weight: 600;
+
+    &:before {
+      content: '';
+      @extend %ibm;
+      width: 0.3rem;
+      height: 0.3rem;
+      background: $secondary_color;
+      margin-right: 1rem;
+      margin-left: 0.4rem;
+    }
+  }
+
+  &__meta {
+    margin-top: 2.5rem;
+
+    p {
+      margin-bottom: 1rem;
+    }
+  }
+
+  &__block:hover {
+
+    &:before {
+      transform: scale(0);
+    }
+
+    &:after {
+      transform: scale(1);
+    }
+
+    & .testimonials__author-name {
+      color: $secondary_color;
+    }
+  }
+
+  &__loadmore {
+    padding: 5.5rem 0;
+  }
 
 }
