--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -35,6 +35,7 @@
 @import "partials/_services";
 @import "partials/_service";
 @import "partials/_testimonials";
+@import "partials/_contacts";
 
 
 @import "adaptive";			// стили адаптивки
