--- a/assets/scss/_some.scss
+++ b/assets/scss/_some.scss
@@ -1,3 +1,13 @@
+html {
+	line-height: 1;
+	font-size: 62.5%;
+}
+
+body {
+	font: 16px/1.618 $primary_font, serif;
+	font-size: 1.6rem; /* Font-sizing with rem unit */
+}
+
 h2 {
 	font-weight: 600;
 	font-size: 3rem;
@@ -16,8 +26,6 @@ h3 {
 
 p {
 	font-weight: 400;
-	font-size: 1.5rem;
-	line-height: 2.4rem;
 	margin-bottom: 2rem;
 }
 
@@ -30,19 +38,34 @@ strong, b, .strong {
 	max-width: 124rem;
 	margin: 0 auto;
 	position: relative;
-	padding-left: 6rem;
-	padding-right: 6rem;
+	padding-left: 4rem;
+	padding-right: 4rem;
 
 	&--full-height {
 		height: 100%;
 	}
 
 	&--left {
-		margin-left: 6rem;
+		padding-left: 12rem;
 	}
 
 	&--flex {
 		display: flex;
+	}
+
+	&--grid {
+		font-size: 0;
+		& > :not(&) {
+			font-size: 1.6rem;
+		}
+	}
+
+	&--form {
+		max-width: 80rem;
+		font-size: 0;
+		& form > :not(&) {
+			font-size: 1.6rem;
+		}
 	}
 
 }
@@ -50,7 +73,7 @@ strong, b, .strong {
 ul {
 	li {
 		position: relative;
-		padding-left: 1.8rem;
+		padding-left: 2.4rem;
 	}
 }
 
@@ -61,7 +84,7 @@ ul {
 			content: '';
 			@include absolute-list-circle(.7rem);
 			left: 0;
-			border: 0.2rem solid $secondary_color;
+			border: 2px solid $secondary_color;
 			box-sizing: border-box;
 		}
 	}
@@ -74,6 +97,10 @@ ul {
 @include hover-svg-in-block('service');
 
 .heading {
+
+	& + p {
+		margin-bottom: 0;
+	}
 
 	&--underline {
 
@@ -99,6 +126,72 @@ ul {
 .section {
 
 	&__header {
-		margin: 5em 0;
+		padding: 5em 0;
 	}
+
+	border-bottom: 0.1rem solid $border_color;
+}
+
+.input__group {
+	margin-bottom: 2rem;
+
+	input {
+		width: 100%;
+		background: none;
+		border: none;
+		font-size: 1.1rem;
+		line-height: 2rem;
+		text-transform: uppercase;
+		color: $primary_color;
+		box-sizing: border-box;
+
+		@include placeholder {
+			color: $primary_color;
+		}
+	}
+
+	.input__underline {
+		display: block;
+		position: relative;
+
+		&:before, &:after {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
+
+		&:before {
+			width: 100%;
+			height: .1rem;
+			background-color: #dcdcdc;
+		}
+
+		&:after {
+			width: 0;
+			height: .125rem;
+			background-color: $secondary_color;
+			transition-duration: $time;
+			transition-timing-function: ease;
+			transition-property: width;
+		}
+	}
+
+	input:focus + .input__underline:after {
+		width: 100%;
+	}
+}
+
+textarea {
+	height: 6.25rem;
+	resize: none;
+	overflow: scroll;
+	border: 0;
+	background-color: transparent;
+	color: #1d1d21;
+	font-size: 1.125rem;
+	padding: .3125rem 1.25rem;
+	z-index: 2;
+	padding: .9375rem 1.25rem;
+	overflow: hidden;
 }
