--- a/assets/scss/base/_mixin.scss
+++ b/assets/scss/base/_mixin.scss
@@ -130,3 +130,10 @@
 		}
 	}
 }
+
+@mixin placeholder {
+	&::-webkit-input-placeholder {@content}
+	&:-moz-placeholder           {@content}
+	&::-moz-placeholder          {@content}
+	&:-ms-input-placeholder      {@content}
+}
