fix css bg relative path

--- a/assets/scss/partials/_service.scss
+++ b/assets/scss/partials/_service.scss
@@ -18,7 +18,7 @@
       content: '';
       @extend %ibt;
       float: right;
-      background: url(/assets/img/svg/info.svg) no-repeat center;
+      background: url('assets/img/svg/info.svg') no-repeat center;
       background-size: 1.4rem 1.4rem;
       border: 0.2rem solid $secondary_color_darker;
       width: 3.2rem;
@@ -36,7 +36,7 @@
   &:hover &__heading {
     &:before {
       color: $color_white;
-      background: url(/assets/img/svg/info-active.svg) no-repeat center;
+      background: url('assets/img/svg/info-active.svg') no-repeat center;
       background-size: 1.4rem 1.4rem;
       background-color: $secondary_color;
     }
