--- a/assets/scss/_libs.scss
+++ b/assets/scss/_libs.scss
@@ -4,9 +4,9 @@ $selectric-main-color:      #DDD !default;                                      
 $selectric-secondary-color: #BBB !default;                                              // Color used in button
 $selectric-text-color:      #444 !default;                                              // Color used in label
 $selectric-bg-color:        #F8F8F8 !default;                                           // Background color
-$selectric-height:          40px !default;                                              // Outer height
-$selectric-spacing:         10px !default;                                              // Label left padding
-$selectric-border-width:    1px !default;                                               // Outer border width
+$selectric-height:          4rem !default;                                              // Outer height
+$selectric-spacing:         1rem !default;                                              // Label left padding
+$selectric-border-width:    0.1rem !default;                                               // Outer border width
 $selectric-inner-height:    $selectric-height - ($selectric-border-width * 2) !default; // Inner height
 
 .selectric-wrapper {
@@ -29,7 +29,7 @@ $selectric-inner-height:    $selectric-height - ($selectric-border-width * 2) !d
     overflow: hidden;
     text-overflow: ellipsis;
     margin: 0 $selectric-inner-height 0 $selectric-spacing;
-    font-size: 12px;
+    font-size: 1.1rem;
     line-height: $selectric-inner-height;
     color: $selectric-text-color;
     height: $selectric-inner-height;
@@ -46,7 +46,7 @@ $selectric-inner-height:    $selectric-height - ($selectric-border-width * 2) !d
     color: $selectric-secondary-color;
     text-align: center;
     font: 0/0 a;
-    *font: 20px/#{$selectric-inner-height} Lucida Sans Unicode, Arial Unicode MS, Arial;
+    *font: 2.2rem/#{$selectric-inner-height} Lucida Sans Unicode, Arial Unicode MS, Arial;
 
     &:after {
       content: " ";
@@ -58,7 +58,7 @@ $selectric-inner-height:    $selectric-height - ($selectric-border-width * 2) !d
       margin: auto;
       width: 0;
       height: 0;
-      border: 4px solid transparent;
+      border: .4rem solid transparent;
       border-top-color: $selectric-secondary-color;
       border-bottom: none;
     }
@@ -140,8 +140,8 @@ $selectric-inner-height:    $selectric-height - ($selectric-border-width * 2) !d
   clip: rect(0, 0, 0, 0) !important;
   margin: 0 !important;
   padding: 0 !important;
-  width: 1px !important;
-  height: 1px !important;
+  width: .1rem !important;
+  height: .1rem !important;
   outline: none !important;
   border: none !important;
   *font: 0/0 a !important;
@@ -161,9 +161,9 @@ $selectric-inner-height:    $selectric-height - ($selectric-border-width * 2) !d
   top: 100%;
   left: 0;
   background: $selectric-bg-color;
-  border: 1px solid darken($selectric-main-color, 10%);
+  border: .1rem solid darken($selectric-main-color, 10%);
   z-index: -1;
-  box-shadow: 0 0 10px -6px;
+  box-shadow: 0 0 1rem -.6rem;
 
   .selectric-scroll {
     height: 100%;
@@ -179,14 +179,14 @@ $selectric-inner-height:    $selectric-height - ($selectric-border-width * 2) !d
     list-style: none;
     padding: 0;
     margin: 0;
-    font-size: 12px;
-    line-height: 20px;
-    min-height: 20px;
+    font-size: 1.1rem;
+    line-height: 2rem;
+    min-height: 2rem;
   }
 
   li {
     display: block;
-    padding: 10px;
+    padding: 1rem;
     color: #666;
     cursor: pointer;
 
@@ -222,7 +222,7 @@ $selectric-inner-height:    $selectric-height - ($selectric-border-width * 2) !d
   .selectric-group {
     .selectric-group-label {
       font-weight: bold;
-      padding-left: 10px;
+      padding-left: 1rem;
       cursor: default;
       user-select: none;
       background: none;
@@ -235,7 +235,7 @@ $selectric-inner-height:    $selectric-height - ($selectric-border-width * 2) !d
     }
 
     li {
-      padding-left: 25px;
+      padding-left: 2.5rem;
     }
   }
 }
