add styles and markup for form elements

--- a/assets/scss/partials/_contacts.scss
+++ b/assets/scss/partials/_contacts.scss
@@ -1,9 +1,15 @@
 .contacts {
+  text-transform: uppercase;
+  font-weight: 500;
 
   p {
     font-size: 1.1rem;
     line-height: 2rem;
     margin-bottom: .4rem;
+  }
+
+  .contacts__submit {
+    margin-top: 20rem;
   }
 
 }
