--- a/assets/scss/_some.scss
+++ b/assets/scss/_some.scss
@@ -6,6 +6,7 @@ html {
 body {
 	font: 16px/1.618 $primary_font, serif;
 	font-size: 1.6rem; /* Font-sizing with rem unit */
+    font-weight: 400;
 }
 
 h2 {
@@ -25,7 +26,6 @@ h3 {
 }
 
 p {
-	font-weight: 400;
 	margin-bottom: 2rem;
 }
 
@@ -141,6 +141,7 @@ ul {
 		border: none;
 		font-size: 1.1rem;
 		line-height: 2rem;
+        font-weight: 500;
 		text-transform: uppercase;
 		color: $primary_color;
 		box-sizing: border-box;
@@ -182,16 +183,111 @@ ul {
 	}
 }
 
-textarea {
-	height: 6.25rem;
-	resize: none;
-	overflow: scroll;
-	border: 0;
-	background-color: transparent;
-	color: #1d1d21;
-	font-size: 1.125rem;
-	padding: .3125rem 1.25rem;
-	z-index: 2;
-	padding: .9375rem 1.25rem;
-	overflow: hidden;
+.textarea__group {
+  position: relative;
+
+  textarea {
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 19.6rem;
+    resize: none;
+    overflow: scroll;
+    border: 0;
+    background-color: transparent;
+    color: $primary_color;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    padding: .3125rem 1.25rem;
+    box-sizing: border-box;
+    z-index: 2;
+
+    @include placeholder {
+      color: #dcdcdc;
+    }
+  }
+
+  .textarea__underline {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+
+    i {
+      display: block;
+      position: absolute;
+      background-color: #dcdcdc;
+
+      &:before {
+        content: '';
+        display: block;
+        position: absolute;
+        background-color: #dcdcdc;
+        transition-duration: $time;
+        transition-timing-function: ease;
+        transition-property: width,height
+      }
+
+      &:nth-of-type(1) {
+        height: .1rem;
+        width: 100%;
+        top: 0;
+        left: 0
+      }
+
+      &:nth-of-type(1):before {
+        top: 0;
+        left: 0;
+        height: .125rem;
+        width: 0
+      }
+
+      &:nth-of-type(2) {
+        width: .1rem;
+        height: 100%;
+        top: 0;
+        right: 0
+      }
+
+      &:nth-of-type(2):before {
+        top: 0;
+        right: 0;
+        height: 0;
+        width: .125rem
+      }
+
+      &:nth-of-type(3) {
+        height: .1rem;
+        width: 100%;
+        bottom: 0;
+        right: 0
+      }
+
+      &:nth-of-type(3):before {
+        bottom: 0;
+        right: 0;
+        height: .125rem;
+        width: 0
+      }
+
+      &:nth-of-type(4) {
+        width: .1rem;
+        height: 100%;
+        bottom: 0;
+        left: 0
+      }
+
+      &:nth-of-type(4):before {
+        bottom: 0;
+        left: 0;
+        height: 0;
+        width: .125rem
+      }
+    }
+
+  }
+
 }
