--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -4,6 +4,7 @@
 
 $bgcolor:                   #ffffff;
 $color_white:               #ffffff;
+$color_gray:                #dcdcdc;
 $primary_color:             #3f4147;
 $secondary_color:           #a70c5d;
 $secondary_color_darker:    #9f2865;
@@ -31,3 +32,4 @@ $grid-lg-max:   1199px;
 $grid-xl-min:   1200px;
 
 $time: 0.3s;
+$social_icon_size: 1.2rem;
