--- a/assets/scss/_some.scss
+++ b/assets/scss/_some.scss
@@ -7,6 +7,7 @@ body {
 	font: 16px/1.618 $primary_font, serif;
 	font-size: 1.6rem; /* Font-sizing with rem unit */
     font-weight: 400;
+  color: $primary_color;
 }
 
 h2 {
@@ -27,6 +28,11 @@ h3 {
 
 p {
 	margin-bottom: 2rem;
+}
+
+a {
+  color: $secondary_color;
+  text-decoration: underline;
 }
 
 strong, b, .strong {
@@ -198,7 +204,7 @@ ul {
     color: $primary_color;
     font-size: 1.5rem;
     line-height: 2rem;
-    padding: .3125rem 1.25rem;
+    padding: 1.2rem 1.25rem;
     box-sizing: border-box;
     z-index: 2;
 
@@ -290,4 +296,8 @@ ul {
 
   }
 
+}
+
+.self-center {
+  @extend %cam;
 }
