--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -24,6 +24,7 @@
     line-height: 3rem;
     font-weight: 500;
     text-transform: uppercase;
+    text-decoration: none;
     color: $primary_color;
 
     &:hover {
