--- a/assets/scss/partials/_welcome.scss
+++ b/assets/scss/partials/_welcome.scss
@@ -1,7 +1,10 @@
 .welcome {
-  background: url(assets/img/home-screen.jpg);
-  background-size: 124rem auto;
+  background: #f5f5f5;
   height: 67rem;
+
+  .wrap {
+    background: url(assets/img/home-screen.jpg) no-repeat right;
+  }
 
   &__content {
     position: absolute;
