--- a/dev/partials/header.html
+++ b/dev/partials/header.html
@@ -9,12 +9,12 @@
                 <li><a href="#contacts">Контакты</a></li>
             </ul>
 
-            <div class="header__lang-choose selectric--lang">
-                <select class="js_select">
-                    <option value="ru">Ru</option>
-                    <option value="En">En</option>
-                    <option value="Ua">Ua</option>
-                </select>
+            <div class="lang header__lang selectric--lang">
+                <a href="#" class="lang__link lang__item--current">ru</a>
+                <ul class="lang__list">
+                    <li class="lang__item"><a href="#" class="lang__link">en</a></li>
+                    <li class="lang__item"><a href="#" class="lang__link">ua</a></li>
+                </ul>
             </div>
         </nav>
     </div>
