--- a/assets/scss/partials/_welcome.scss
+++ b/assets/scss/partials/_welcome.scss
@@ -2,8 +2,12 @@
   background: #f5f5f5;
   height: 67rem;
 
+  p {
+    margin-bottom: 2.5rem;
+  }
+
   .wrap {
-    background: url(assets/img/home-screen.jpg) no-repeat right;
+    background: url(assets/img/home-screen.jpg) no-repeat right bottom
   }
 
   &__content {
@@ -11,4 +15,23 @@
     width: 37%;
     bottom: 0;
   }
+
+  &__heading {
+
+    span {
+      display: block;
+      margin-bottom: 0.5rem;
+    }
+
+    &:after {
+      margin-top: 3rem;
+      margin-bottom: 3rem;
+    }
+  }
+
+  .btn {
+    margin-top: 2.5rem;
+    margin-bottom: 6rem;
+  }
+
 }
