--- a/dev/partials/services.html
+++ b/dev/partials/services.html
@@ -9,7 +9,7 @@
             <div class="services__row">
                 <div class="wrap wrap--flex">
                     <div class="services__block service service--with-icon js_service__info">
-                        <div class="service__icon svg-icon svg--document">
+                        <div class="service__icon svg-icon svg--document svg--animate">
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                  viewBox="0 0 22 22" style="enable-background:new 0 0 22 22;" xml:space="preserve">
                                 <rect x="0.7" y="0.8" class="st0 svg__st" width="20.7" height="18.7"/>
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                     <div class="services__block service service--with-icon js_service__info">
-                        <div class="service__icon svg-icon svg--target">
+                        <div class="service__icon svg-icon svg--target svg--animate">
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                  viewBox="0 0 26 26" style="enable-background:new 0 0 26 26;" xml:space="preserve">
                                 <g>
@@ -92,7 +92,7 @@
             <div class="services__row">
                 <div class="wrap wrap--flex">
                     <div class="services__block service service--with-icon js_service__info">
-                        <div class="service__icon svg-icon svg--notepad">
+                        <div class="service__icon svg-icon svg--notepad svg--animate">
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                  viewBox="0 0 24 23" style="enable-background:new 0 0 24 23;" xml:space="preserve">
                                 <g>
@@ -140,7 +140,7 @@
                         </div>
                     </div>
                     <div class="services__block service service--with-icon js_service__info">
-                        <div class="service__icon svg-icon svg--court">
+                        <div class="service__icon svg-icon svg--court svg--animate">
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                  viewBox="0 0 25 25" style="enable-background:new 0 0 25 25;" xml:space="preserve">
                             <g>
