--- a/assets/scss/partials/_service.scss
+++ b/assets/scss/partials/_service.scss
@@ -39,7 +39,7 @@
       animation: dash 6s linear forwards;
     }
 
-    .svg__fl {
+    .svg__fl:not(.svg__no-st) {
       fill: #fff;
       animation: dash 6s linear forwards, fill 1s linear;
     }
