--- a/assets/scss/partials/_contacts.scss
+++ b/assets/scss/partials/_contacts.scss
@@ -14,3 +14,176 @@
   }
 
 }
+
+.input__group {
+  margin-bottom: 2rem;
+
+  input {
+    width: 100%;
+    background: none;
+    border: none;
+    font-size: 1.1rem;
+    line-height: 2rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: $primary_color;
+    box-sizing: border-box;
+
+    @include placeholder {
+      color: $primary_color;
+    }
+
+    &:focus + .input__underline:after {
+      width: 100%;
+    }
+  }
+
+  .input__underline {
+    display: block;
+    position: relative;
+
+    &:before, &:after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+
+    &:before {
+      width: 100%;
+      height: .1rem;
+      background-color: #dcdcdc;
+    }
+
+    &:after {
+      width: 0;
+      height: .125rem;
+      background-color: $secondary_color;
+      transition-duration: $time;
+      transition-timing-function: ease;
+      transition-property: width;
+    }
+  }
+}
+
+.textarea__group {
+  position: relative;
+
+  textarea {
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 19.6rem;
+    resize: none;
+    overflow: scroll;
+    border: 0;
+    background-color: transparent;
+    color: $primary_color;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    padding: 1.2rem 1.25rem;
+    box-sizing: border-box;
+    z-index: 2;
+
+    @include placeholder {
+      color: #dcdcdc;
+    }
+
+    &:focus + .textarea__underline i {
+      &:nth-of-type(odd):before {
+        width: 100%;
+      }
+      &:nth-of-type(even):before {
+        height: 100%;
+      }
+    }
+  }
+
+  .textarea__underline {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+
+    i {
+      display: block;
+      position: absolute;
+      background-color: #dcdcdc;
+
+      &:before {
+        content: '';
+        display: block;
+        position: absolute;
+        background-color: #dcdcdc;
+        transition-duration: $time;
+        transition-timing-function: ease;
+        transition-property: width,height
+      }
+
+      &:nth-of-type(1) {
+        height: .1rem;
+        width: 100%;
+        top: 0;
+        left: 0
+      }
+
+      &:nth-of-type(1):before {
+        background-color: $secondary_color;
+        top: 0;
+        left: 0;
+        height: .125rem;
+        width: 0
+      }
+
+      &:nth-of-type(2) {
+        width: .1rem;
+        height: 100%;
+        top: 0;
+        right: 0
+      }
+
+      &:nth-of-type(2):before {
+        background-color: $secondary_color;
+        top: 0;
+        right: 0;
+        height: 0;
+        width: .125rem
+      }
+
+      &:nth-of-type(3) {
+        height: .1rem;
+        width: 100%;
+        bottom: 0;
+        right: 0
+      }
+
+      &:nth-of-type(3):before {
+        background-color: $secondary_color;
+        bottom: 0;
+        right: 0;
+        height: .125rem;
+        width: 0
+      }
+
+      &:nth-of-type(4) {
+        width: .1rem;
+        height: 100%;
+        bottom: 0;
+        left: 0
+      }
+
+      &:nth-of-type(4):before {
+        background-color: $secondary_color;
+        bottom: 0;
+        left: 0;
+        height: 0;
+        width: .125rem
+      }
+    }
+
+  }
+
+}
